Fri Oct  3 06:06:28 2014  Eric Wong  <e@80x24.org>

	* st.c (next_pow2): new function (from old bignum.c)
	  (new_size): use next_pow2 function

Fri Oct  3 05:58:58 2014  Eric Wong  <e@80x24.org>

	* vm_trace.c (rb_tp_t): pack 56 => 48 bytes on 64-bit

Thu Oct  2 18:41:45 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/etc/etc.c (etc_nprocessors): Windows support.
	  see [Feature #10267]

Thu Oct  2 12:21:52 2014  Tanaka Akira  <akr@fsij.org>

	* ext/etc/etc.c (etc_nprocessors): New method.
	  Accepted by matz at RubyKaigi 2014.
	  [ruby-core:65142] [Feature #10267]

Thu Oct  2 07:56:49 2014  Eric Wong  <e@80x24.org>

	* iseq.c (rb_iseq_line_trace_each): explicit cast
	  Fix https://travis-ci.org/ruby/ruby/jobs/36814282

Thu Oct  2 05:40:05 2014  Eric Wong  <e@80x24.org>

	* ruby.h: set rb_event_flag_t to uint32_t
	  [ruby-core:65315] [misc #10249]

Thu Oct  2 05:32:17 2014  Eric Wong  <e@80x24.org>

	* io.c (fptr_finalize): free memory before GC sweep
	  [ruby-core:65269] [Feature #10295]

Thu Oct  2 05:27:24 2014  Eric Wong  <e@80x24.org>

	* marshal.c (w_class): check dump_arg->compat_tbl before lookup
	  (w_object): lazy init ->compat_tbl before insert
	  (obj_alloc_by_class): ditto
	  (clear_dump_arg): free only non-NULL ->compat_tbl
	  (clear_load_arg): ditto for ->compat_tbl
	  (marshal_dump): ->compat_tbl defaults to zero
	  (marshal_load): ditto for ->compat_tbl
	  (r_entry0): check l->compat_tbl before lookup
	  (r_fixup_compat): ditto
	  [ruby-core:65305] [Feature #10302]

Wed Oct  1 21:14:34 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_type.c: use typed data.

Wed Oct  1 18:15:42 2014  Nolan Evans  <nolane@gmail.com>

	* compile.c: remove commented out code.

Wed Oct  1 17:38:53 2014  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/fileutils/test_fileutils.rb: AIX does not allow
	  a sticky bit on a regular file.

Wed Oct  1 17:31:41 2014  Eric Hodel  <drbrain@segment7.net>

	* NEWS:  Add RubyGems update.
